--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
 <ul id= "articles">
   <% @articles.each do |article| %>
   <li>
-    <%= link_to article.title, article_path, class:'article_title'%>
+    <%= link_to article.title, article_path(article), class:'article_title'%>
   </li>
   <% end %>
 </ul>
