--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for (@article) do |f| %>
+<%= form_for(@article, html: {multipart: true}) do |f| %>
   <ul>
     <% @article.errors.full_messages.each do |error| %>
     <li><%= error %></li>
@@ -11,6 +11,11 @@
   <p>
     <%= f.label :body %><br>
     <%= f.text_field :body %>
+  </p>
+  <p>
+    <%= image_tag @article.image.url if @article.image.exists? %>
+    <%= f.label :image, "Attach an Image" %><br>
+    <%= f.file_field :image %>
   </p>
   <p>
     <%= f.submit %>
