--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,6 +7,8 @@
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
 <%= link_to "Edit", edit_article_path(@article) %>
 
+<p><%= image_tag @article.image.url(:medium) if @article.image.exists? %></p>
+
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 
